# SIP

./: .gitignore  LICENSE  SIP.cabal
app/: Main.hs
src/SIP/: Image.hs  Pixel.hs
src/SIP/Draw/: Shapes.hs
src/SIP/Pixel/: Colors.hs  Conversions.hs  RGB.hs
src/SIP/Pixel/Primitive/: BoolPixel.hs  U1V.hs  U3V.hs  U4V.hs
src/SIP/Storage/: BMP.hs
